# SIAVPN

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/core/: openVpnClient.cpp  openVpnClient.h  openVpnProtocol.cpp  openVpnProtocol.h  vpnConfigManager.cpp  vpnConfigManager.h  vpnConnectionManager.cpp  vpnConnectionManager.h  vpnProtocol.h  vpnSecurityManager.cpp  vpnSecurityManager.h
src/ui/: main.qml  vpnController.cpp  vpnController.h
